--- a/package.json
+++ b/package.json
@@ -6,20 +6,38 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
     "styled-components": "^6.0.9"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.3",
+    "@babel/preset-env": "^7.23.3",
+    "@babel/preset-react": "^7.23.3",
+    "@babel/preset-typescript": "^7.23.3",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.1.2",
+    "@types/axios": "^0.14.0",
+    "@types/jest": "^29.5.10",
     "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/react": "^18.2.38",
     "@types/react-dom": "^18",
+    "@types/styled-components": "^5.1.32",
+    "@types/testing-library__user-event": "^4.2.0",
+    "babel-jest": "^29.7.0",
     "eslint": "^8",
     "eslint-config-next": "13.5.4",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-fetch-mock": "^3.0.3",
+    "jsdom": "^23.0.0",
+    "ts-jest": "^29.1.1",
     "typescript": "^5"
   }
 }
