--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/preset-env": "^7.23.3",
     "@babel/preset-react": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
+    "@swc/core": "^1.3.99",
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.1.2",
     "@types/axios": "^0.14.0",
@@ -37,6 +38,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "jest-fetch-mock": "^3.0.3",
     "jsdom": "^23.0.0",
+    "swc-loader": "^0.2.3",
     "ts-jest": "^29.1.1",
     "typescript": "^5"
   }
